# solana-phoenix-indexer

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  prometheus.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: architecture.md  book_reconstruction.md  decoder_protocol.md  metrics.md  subscription.md  ws_api.md
rust-decoder/: Cargo.toml  Dockerfile
rust-decoder/src/: decoder.rs  main.rs  types.rs
ts-service/: Dockerfile  package-lock.json  package.json  tsconfig.json
ts-service/src/: api.ts  config.ts  decoder-client.ts  index.ts  logger.ts  metrics.ts  orderbook.ts  phoenix-subscriber.ts  types.ts
