[package]
name = "phoenix-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bs58 = "0.5"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
once_cell = "1"
bytemuck = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
